--- a/doc/fr_FR/TroubleshootingHomebridge.asciidoc
+++ b/doc/fr_FR/TroubleshootingHomebridge.asciidoc
@@ -1,4 +1,4 @@
-== Aide Homebridge
+=== Aide Homebridge
 
 *-> Je n'arrive pas à inclure jeedom dans homekit !*
 
@@ -46,5 +46,3 @@ image::../images/sans-reponse.jpg[]
 4. Si malgré tout vous avez toujours ces états, lancez une réparation.
 
 TIP: Beaucoup d'informations se trouvent dans les logs, le prochain chapitre vous expliquera comment les analyser
-
-include::logHomebridge.asciidoc[]
