--- a/doc/fr_FR/demonHomebridge.asciidoc
+++ b/doc/fr_FR/demonHomebridge.asciidoc
@@ -1,4 +1,4 @@
-== Prérequis
+=== Prérequis
 
 Afin d'utiliser homebridge, vous devez déclarer au moins un équipement sous iOS, vous verrez dans la configuration du plugin une section Homebridge.
 (*Plugins* -> *Gestion des plugins* -> *App Mobile*)
@@ -22,14 +22,14 @@ image::../images/appareil-ios.png[]
 [IMPORTANT]
 *Les installations sous Docker et Raspberry Pi 1 ne sont pas compatibles avec cette version de Homebridge.*
 
-== Configuration de Homebridge
+=== Configuration de Homebridge
 
 Dans la configuration du plugin mobile, assurez vous d'avoir la dernière version des dépendances. En cas de doute, vous pouvez les réinstaller en cliquant sur "relancer". 
 
 *Le temps d'installation des dépendances peut varier en fonction du matériel utilisé.*
 
-image::../images/dépendances-homebridge.png[]
+image::../images/dependances-homebridge.png[]
 
 Une fois les dépendances installées, le démon se lance. Si le statut n'est pas sur "OK", cliquez sur "redémarrer".
 
-image::../images/démon-homebridge.png[]
+image::../images/demon-homebridge.png[]
