--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -8,9 +8,11 @@
     * Meilleure réparation et installation plus poussée pour éviter des problèmes divers
     * Installation de NodeJS 6 LTS sur toutes les architectures
     * Type Generic Info supporté pour les infos Jeedom de type Numerique, Binaire, Autre.
-    IMPORTANT: ne pas modifier ce type dans Jeedom pendant que homebridge fonctionne
+[IMPORTANT]
+ne pas modifier ce type dans Jeedom pendant que homebridge fonctionne
     * Lumières : corrigé, du simple interrupteur, avec luminosité seulement ou RGB, toutes fonctionnent.
-    TIP: Si vous aviez un pont Philips Hue v1, vous avez maintenant accès à HomeKit :)
+[TIP]
+Si vous aviez un pont Philips Hue v1, vous avez maintenant accès à HomeKit :)
     * Alarme : les modes sont liable aux modes HomeKit : Absent, Nuit, Présent, Désactivé. Fonctionne en consultation ET action.
     * Nouveau design de l'app, simplification, plus besoin de choisir les plugins.
     * Fenêtre "Information" pour donner des éléments importants de votre configuration en cas de demande d'aide sur le forum (à la demande)
