--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -18,8 +18,11 @@ Si vous aviez un pont Philips Hue v1, vous avez maintenant accès à HomeKit :)
     * Fenêtre "Information" pour donner des éléments importants de votre configuration en cas de demande d'aide sur le forum (à la demande)
     * Debug des périphériques en non visible ou désactivés dans les logs
     * Temporisation des Slider des lumières et des volets, sinon toutes les valeurs sont envoyées à Jeedom, maintenant elle ne le sont que si le slider dans Maison ne bouge plus depuis 500mx
-    * Types Génériques Status Defectueux, Sabotage et Status Actif (tous les trois binaires)
+    * Types Génériques Status Defectueux (spécifique homebridge), Sabotage et Status Actif (spécifique homebridge) (tous les trois binaires)
     * Possibilité de personnaliser les etats des Portes de Garage (Ouvert (255), En Ouverture (254), Stopé (253), En Fermeture (252), Fermé (0)) avec d'autres valeurs.
+    * Nouveaux types spécifiques à homebridge : Speakers, il devrait fonctionner avec sonos par exemple (à tester), les types sont Info/Haut-parleur Mute (binaire), Info/Haut-parleur Volume (pourcentage), Action/Haut-parleur Mute, Action/Haut-parleur Unmute, Action/Haut-parleur Volume (typiquement un slider)
+[IMPORTANT]
+Info/Haut-parleur Mute est obligatoire, c'est étrange mais c'est une obligation coté Homekit
 
 ==== v1.2.1
     * Bugfix : capteurs Fenêtres
