--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -18,10 +18,20 @@ Si vous aviez un pont Philips Hue v1, vous avez maintenant accès à HomeKit :)
     * Fenêtre "Information" pour donner des éléments importants de votre configuration en cas de demande d'aide sur le forum (à la demande)
     * Debug des périphériques en non visible ou désactivés dans les logs
     * Temporisation des Slider des lumières et des volets, sinon toutes les valeurs sont envoyées à Jeedom, maintenant elle ne le sont que si le slider dans Maison ne bouge plus depuis 500mx
-    * Types Génériques Status Defectueux (spécifique homebridge), Sabotage et Status Actif (spécifique homebridge) (tous les trois binaires)
+    * Type Générique Sabotage supporté (binaire)
     * Possibilité de personnaliser les etats des Portes de Garage (Ouvert (255), En Ouverture (254), Stopé (253), En Fermeture (252), Fermé (0)) avec d'autres valeurs.
     * Les types spécifiques à Homebridge : j'ai maintenant la possibilité d'avoir des types spécifiques pour homebridge, ceux-ci ne font pas partie du core (comme les types génériques) mais complètent ceux-ci. Il faut néanmoins les définir manuellement dans le plugin. (les types génériques restent utilisés principalement, ces types sont des compléments pour les types génériques qui n'existent pas)
-    * Nouveaux types spécifiques à homebridge : Speakers, il devrait fonctionner avec sonos par exemple (à tester), les types sont Info/Haut-parleur Mute (binaire), Info/Haut-parleur Volume (pourcentage), Action/Haut-parleur Mute, Action/Haut-parleur Unmute, Action/Haut-parleur Volume (typiquement un slider)
+    * Nouveaux types spécifiques à homebridge : 
+    * Nouveaux types spécifique à homebridge : 
+      ** Status Defectueux (binaire : 0:non/ 1:oui -> peut-être mappé à un binaire représentant par exemple un lien mort chez z-wave) 
+      ** Status Actif (binaire : 0:non/ 1:oui -> peut-etre mappé au status "online" d'une xiaomi yeelight par exemple)
+      ** Haut-parleurs, il devrait fonctionner avec sonos par exemple (à tester), les types sont : 
+         *** Info/Haut-parleur Mute (binaire)
+         *** Info/Haut-parleur Volume (pourcentage)
+         *** Action/Haut-parleur Mute
+         *** Action/Haut-parleur Unmute
+         *** Action/Haut-parleur Toggle Mute (soit Toggle soit Mute/Unmute, les deux choix sont possibles séparément)
+         *** Action/Haut-parleur Volume (typiquement un slider)
 [IMPORTANT]
 Info/Haut-parleur Mute est obligatoire, c'est étrange mais c'est une obligation coté Homekit
 
