--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -16,8 +16,8 @@ ne pas modifier ce type dans Jeedom pendant que homebridge fonctionne
 Si vous aviez un pont Philips Hue v1, vous avez maintenant accès à HomeKit :)
     * Alarme : les modes sont liable aux modes HomeKit : Absent, Nuit, Présent, Désactivé. Fonctionne en consultation ET action.
     * Nouveau design du plugin, simplification, plus besoin de choisir les plugins.
-    * Fenêtre "Information" (en niveau de log "info" ou "debug") pour donner des éléments importants de votre configuration en cas de demande d'aide sur le forum (à la demande)
-    * Debug des périphériques en non visible ou désactivés dans les logs
+    * Fenêtre "DebugInfo" (en niveau de log "info" ou "debug") pour donner des éléments importants de votre configuration en cas de demande d'aide sur le forum (à la demande)
+    * Périphériques invisibles ajoutés à homebridge, tant que "Envoyer dans homebridge" est coché.
     * Temporisation des Slider des lumières et des volets et volumes, sinon toutes les valeurs sont envoyées à Jeedom, maintenant elle ne le sont que si le slider dans Maison ne bouge plus depuis 500ms
     * Type Générique officiel Sabotage supporté (binaire)
     * Possibilité de personnaliser les etats des Portes de Garage (Ouvert (255), En Ouverture (254), Stopé (253), En Fermeture (252), Fermé (0)) avec d'autres valeurs.
@@ -139,19 +139,5 @@ Si vous avez un problème avec un périphérique malgré tout : décochez "Envoy
     * Au démarrage du daemon, vérification si avahi-daemon et dbus sont bien lancés, sinon, les démarrer.
     * A l'install des dépendances, passer avahi-daemon et dbus à enabled si pas le cas.
     * Corrections diverses, simplifications et optimisations.
-
-
-== Bugs Connus
-  * Le plugin Alarme n'est pas encore complêtement supporté car vous pouvez créer des "modes" dynamiquement et les modes de HomeKit sont statique, je dois trouver un moyen sympa de les "mapper" entre eux.
-  * Le plugin Thermostat est resté au même point aussi.
-  * Redémarrage à la sauvage pendant le démarrage du plugin (du daemon) : vous crachez tout votre homebridge -> Réparation.
-  * Les ampoules couleur... elle ne fonctionnaient pas bien, ce n'est toujours pas réglé (je dois réécrire cette partie) (toute ampoules en fait)
-  * Possibles problèmes sur certains types génériques plus rares.
-  
-== TODO | ROADMAP
-  * Corriger un bug dans les lightbulbs, set à false la color (pré-existant).
-  * Ajouter des accessoires supportés (Qualité d'air, double relay, etc)
-  * Comme les pièces ne sont pas portée dans Maison, donner l'option d'un préfix ou sufix nom de la pièce pour avoir facile à les ranger dans Maison (mais il faut renommer pour siri... donc on laisse le choix)
-  * Investiguer pour recharger les accessoires sans relancer le daemon.
-  * la vérification du status de dépendances homebridge doit inclure la version homebridge required et HAP-NodeJS etc
-  * ...
+    
+    
