--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -4,9 +4,11 @@
 
 include::presentationHomebridge.asciidoc[]
 
-include::demonHomebridge.asciidoc[]
+include::installationPluginHB.asciidoc[]
 
 include::configurationHomebridge.asciidoc[]
+
+include::migration.asciidoc[]
 
 == Troubleshooting
 
