--- a/doc/fr_FR/configurationHomebridge.asciidoc
+++ b/doc/fr_FR/configurationHomebridge.asciidoc
@@ -1,58 +1,18 @@
-==== Sélection des accessoires 
+== Configuration du plugin homebridge
 
-Vous devez sélectionner les équipements que vous souhaitez utiliser avec Homebridge.
+=== Création du pont homebridge
 
-*Configuration via les plugins*
+Dans la rubrique "gestion", cliquez sur "configuration".
 
-image::../images/config-plugin.png[]
+image::../images/gestion.png[]
 
-*Configuration via les pièces / objets*
-
-image::../images/config-piece.png[]
-
-Cliquez sur les plugins ou les pièces/objets où se trouvent les équipements que vous souhaitez ajouter.
-
-image::../images/config-plugin-1.png[]
-
-Pour sélectionner les équipements que vous voulez utiliser sur Homebridge, cochez la case "Envoyer à Homebridge".
-[TIP]
-Pour ajouter ou supprimer un accessoire dans Homebrige, sélectionnez l'accessoire en question dans Plugins ou Objet/pièces et cochez ou décochez "Envoyer à Homebridge". Cliquez sur sauvegarder. Une fois sauvegardé (et le démon relancé), votre accessoire sera intégré ou supprimé de Homebridge.
-
-En cliquant sur l'équipement, vous verrez les types génériques utilisés pour la communication entre votre jeedom et Homebridge.
-
-image::../images/typegen-1.png[]
-
-La majorité des types génériques est déjà renseignée. Dans certains cas, vous devrez les configurer manuellement (pour le plugin Virtuel par exemple).
-
-Voici les types génériques disponibles : 
-
-Pour les informations : 
-
-image::../images/typeginfo.png[]
-
-Pour les actions : 
-
-image::../images/ypegeaction.png[]
-
-[IMPORTANT]
-Chaque équipement doit disposer d'au moins un type générique de type "Etat". S'il n'y a pas d'Etat, l'équipement ne sera pas disponible sur Homebridge.
-Il faut une certaine cohérence dans le choix des types génériques. Dans le cas d'une lumière par exemple, vous devez avoir l'info "Lumière état" et les actions "Lumières bouton OFF" et "Lumière bouton ON". Si cette cohérence n'est pas respectée, l'équipement peut ne pas apparaître dans Homebridge.
-
-image::../images/ypegelumi.png[]
-
-==== Types génériques compatibles avec Homebridge
-
-include::configurationHomebridgeTypeGenerique.asciidoc[]
-
-==== Configuration du plugin mobile
-
-Une fois tous les objets configurés avec leurs bons types génériques, retournez dans *-> Equipement -> Configuration.*
+Pour créer le pont homekit, il suffit de lui donner un nom et un code "PIN".
 
 image::../images/config-pluginhb.png[]
 
 * *Utilisateur* : Permet à Homebridge d'utiliser l'ApiKey d'un utilisateur de votre Jeedom.
 
-* *Nom Homebridge* : Permet de renommer votre pont Homebridge. 
+* *Nom Homebridge* : Permet de nommer votre pont Homebridge. 
 
 [IMPORTANT]
 Le changement de nom Homebridge vous obligera à reconfigurer vos applications Homekit.
@@ -77,34 +37,111 @@ A n'effectuer que sur conseil d'un membre du forum et il faut retirer le bridge 
 [IMPORTANT]
 Réservé à un public averti. Il n'y aura aucun support pour cette partie. (permet par exemple d'ajouter des cameras à Homebridge)
 
-Une fois les cases *Utilisateur, nom Homebridge et PIN Homebridge* correctement renseignées, finaliser la configuration en cliquant sur **sauvegarder**.
+Une fois les cases *Utilisateur, nom Homebridge et PIN Homebridge* correctement renseignées, finaliser la configuration en cliquant sur **sauvegarder**. Le démon redémarre.
+
+=== Ajout des accéssoires dans homebridge
+
+Vous devez sélectionner les équipements que vous souhaitez utiliser avec Homebridge.
+
+image::../images/config-piece.png[]
+
+Vous devez cliquer sur la pièce de votre choix.
+
+image::../images/choix-acc.png[]
+
+Afin d'ajouter un accéssoire à homebridge, il suffit de cocher la case "Envoyer à Homebridge". Pour finir, cliquez sur la disquette verte pour sauvegarder.
+
+==== Configuration des type génériques
+
+En cliquant sur l'équipement, vous verrez les types génériques utilisés pour la communication entre votre jeedom et Homebridge.
+
+image::../images/typegen-1.png[]
+
+La majorité des types génériques est déjà renseignée. Dans certains cas, vous devrez les configurer manuellement (pour le plugin Virtuel par exemple).
+
+Voici les types génériques disponibles : 
+
+Pour les informations : 
+
+image::../images/typeginfo.png[]
+
+Pour les actions : 
+
+image::../images/ypegeaction.png[]
+
+include::configurationHomebridgeTypeGenerique.asciidoc[]
+
+include::exemple_config_TG.asciidoc[]
+
+Pour valider, retournez dans la configuration du plugin et relancer le démon homebridge en cliquant sur "(Re)Démarrer".
+
+image::../images/demon-homebridge.png[]
 
 ==== Ajout de jeedom dans homekit
 
-Il existe plusieurs applications sur l'appstore compatible homekit. Nous allons utiliser l'application "domicile".
+Il existe plusieurs applications sur l'appstore compatible homekit. Nous allons utiliser l'application "Maison".
 
-Pour inclure jeedom, ouvrir l'application "Maison" et cliquez sur ajouter un accessoire.
+image::../images/app-domicile.jpg[]
+
+Pour inclure jeedom, ouvrir l'application "Maison" et cliquez sur "ajouter un accessoire".
 
 image::../images/home-1.jpg[]
+
+[TIP]
+Dans notre exemple, notre domicile s'appelle "Test", vous pouvez lui donner le nom que vous souhaitez et le modifiant dans les paramètres de l'appication. 
 
 Scannez le code PIN 
 
 image::../images/home-2.jpg[]
 
+[TIP]
+*Vous pouvez également rentrer manuellement le code PIN en cliquant sur "Code absent ou impossible à scanner".*
+
 Sélectionnez votre jeedom
 
 image::../images/home-3.jpg[]
 
-[IMPORTANT]
-L'exemple a été réalisée avec la version beta d'IOS 11. Sur IOS 10 la procécure est quasi identique. Il suffit de sélectionner votre jeedom et de scanner le PIN.
 
-image::../images/home-4.jpg[]
+image::../images/home-4.png
+[]
 
 [IMPORTANT]
 Comme expliqué plus haut dans la doc, Homebridge n'est pas reconnu officiellement par Apple. Un message vous indique que l'accessoire n'est pas cetifié.  Cliquez sur "poursuivre l'ajout".
 
+image::../images/home-04.jpg[]
+
+*Votre jeedom est maintenant intégré à homekit.*
+
+==== Rangement des accessoires dans homekit
+
+Vous devez maintenant ranger vos accessoires correctement dans homekit. Vous devrez créer des pièces et y intégrer vos accessoires.
+
+[IMPORTANT]
+*Les pièces dans jeedom ne sont pas importées dans Homebridge. Ceci n'est pas dû à jeedom mais à la gestion des pièces par Apple.*
+
+Le premier accessoires à "ranger" est le pont jeedom. 
+
 image::../images/home-5.jpg[]
 
-Il suffit maintenant de placer correctement les accessoires dans les bonnes pièces. Vous avez la possibilité de le créer en cliquant sur pièce et créer pièce.
+Vous devez sélectionner la pièce où sera installée le pont. Si elle n'existe pas, vous pouvez la créer en cliquant sur "Créer".
+
+image::../images/home-05.jpg[]
+
+Définissez le nom de la nouvelle pièce. Vous pouvez également lui attribuer un fond d'écran dédié. Cliquez sur "Enregistrer" pour finaliser la création de la pièce.
+
+image::../images/home-051.jpg[]
+
+Cliquez sur suivant pour continuer. 
+
+Maintenant, il ne vous reste plus qu'a ranger tous vos accessoires. 
+
+image::../images/home-052.jpg[]
+
+[TIP]
+*La fonction "inclure dans les favoris" permet d'afficher l'accessoire dans la page principale de l'application*
+
+image::../images/home-053.jpg[]
+
+*Vous devez ajouter un à un les accessoires. Si vous en avez beaucoup, cette partie prendra du temps*.
 
 Vous pouvez retrouver https://support.apple.com/fr-fr/HT204893[ici] la documentation complète de l'application "Maison" d'Apple.
