--- a/doc/fr_FR/presentationHomebridge.asciidoc
+++ b/doc/fr_FR/presentationHomebridge.asciidoc
@@ -1,6 +1,6 @@
 === Présentation Homebridge
 
-*Homebridge* est un demon inclu avec le plugin Mobile qui permet d’interagir avec votre domotique via l’assistant vocal Siri sous iOS. Le HomeKit a été introduit depuis iOS 8, mais est véritablement opérationnel depuis iOS 10 via l’application Home. 
+*Le plugin Homebridge* est un demon qui permet d’interagir avec votre domotique via l’assistant vocal Siri sous iOS. Le HomeKit a été introduit depuis iOS 8, mais est véritablement opérationnel depuis iOS 10 via l’application Home. 
 
 image::../images/homekit-logo.jpg[]
 
@@ -37,7 +37,11 @@ image::../images/siri-02.jpg[]
 Homekit à l'avantage d'être utilisable à l'extérieur du domicile. Seule condition, il faut disposer d'un concentrateur. 
 L'iPad et l'AppleTV (et bientot le HomePod) peuvent servir de concentrateur. Pour cela, ils doivent être connectés au même compte iCloud.
 
-Homekit est utilisable sur iPhone, iPad, Apple Watch et Apple TV (via Siri remote). 
+Homekit est utilisable sur iPhone, iPad, Apple Watch et Apple TV (via Siri remote) et bientôt sur Homepod. 
 
 [TIP]
 *Homekit est le nom officiel du protocole développé par Apple. HomeBridge est son équivalent Open Source développé par nfarina. Ce dernier a étendu le projet HAP-NodeJS qui est le moteur d'HomeBridge.*
+
+====  Type d'accessoire compatible avec homebridge
+
+image::../images/acchb.jpg[]
