Modification de la documentation
Exemple d'intégration de caméra

--- a/doc/fr_FR/exemple_config_TG.asciidoc
+++ b/doc/fr_FR/exemple_config_TG.asciidoc
@@ -58,3 +58,5 @@ image::../images/volet.png[]
 Type d'accéssoire : Aeotec - Contrôleur de porte de garage (GEN5) (zwave)
 
 image::../images/garage.png[]
+
+include::exemple_config_camera.asciidoc[]
